Dishes and Menus static pages deleted + link in header and footer modified.

--- a/assets/styles/sass/components/_menus/_menus-main.sass
+++ b/assets/styles/sass/components/_menus/_menus-main.sass
@@ -19,3 +19,11 @@
             &:hover
                 color: utils.$brown
                 text-decoration-color: utils.$brown
+
+.menu__btn
+    @extend %paragraphe-s
+    background-color: utils.$brown
+    color: utils.$gold
+    &:hover
+        background-color: utils.$gold
+        color: utils.$black
