--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -9,10 +9,10 @@
 						<a class="footer__contact--links" href="#">A propos de nous</a>
 					</li>
 					<li>
-						<a class="footer__contact--links" href="{{path('app_dishes')}}">La carte</a>
+						<a class="footer__contact--links" href="{{path('app_dishes_index')}}">La carte</a>
 					</li>
 					<li>
-						<a class="footer__contact--links" href="{{path('app_menus')}}">Nos menus</a>
+						<a class="footer__contact--links" href="{{path('app_menus_index')}}">Nos menus</a>
 					</li>
 					<li>
 						<a class="footer__contact--links" href="#">Nous contacter</a>
